# prelate-rs

./: ARCHITECTURE.md  CLAUDE.md  COPYRIGHT.md  Cargo.toml  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature.md  question.md
.github/workflows/: check-and-lint.yaml  unit-tests.yaml
examples/: test_unknown_civilization.rs
src/: lib.rs  pagination.rs  testutils.rs  types.rs
src/types/: civilization.rs  games.rs  leaderboards.rs  maps.rs  profile.rs  rank.rs  search.rs
testdata/: housedhorse-games.json  housedhorse.json  neptune.json  onlycams-search-results.json  profile.json  search-results.json
testdata/games/: games_negative_mmr.json  global.json  global_2024_03_18.json  hauntedhouse.json  jigly.json  neptune.json
testdata/leaderboards/: rm_solo.json  rm_team.json
testdata/profile/: housedhorse.json  jigly.json  neptune.json
testdata/search/: jigly.json
