[package]
name = "prelate-rs"
version = "0.1.0"
edition = "2021"
authors = ["William Findlay <william@williamfindlay.com>"]
license = "MIT OR Apache-2.0"

[features]
test-api = []

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["test-util", "macros"] }
