[package]
name = "prelate-rs"
version = "0.1.0"
edition = "2021"
authors = ["William Findlay <william@williamfindlay.com>"]
license = "MIT OR Apache-2.0"

[features]
test-api = []

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.60"
chrono = { version = "0.4.23", features = ["serde"] }
derive-new = "0.5.9"
futures = "0.3.25"
page-turner = "0.8.2"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["float_roundtrip"] }

[dev-dependencies]
arbitrary = { version = "1.2.0", features = ["derive"] }
arbtest = "0.2.0"
tokio = { version = "1.23.0", features = ["test-util", "macros", "rt-multi-thread"] }
