[package]
name = "prelate-rs"
version = "0.3.2"
edition = "2021"
authors = ["William Findlay <william@williamfindlay.com>"]
license = "MIT OR Apache-2.0"
description = "prelate-rs is an idiomatic, asynchronous Rust wrapper around the aoe4world API."
repository = "https://github.com/willfindlay/prelate-rs"

[features]
test-api = []

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.60"
chrono = { version = "0.4.23", features = ["serde", "arbitrary"] }
derive-new = "0.5.9"
derive_setters = "0.1.6"
futures = "0.3.25"
isocountry = "0.3.2"
itertools = "0.12.1"
page-turner = "0.8.2"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["float_roundtrip"] }
strum = { version = "0.26.1", features = ["derive"] }
tokio-test = "0.4.3"
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
arbitrary = { version = "1.2.0", features = ["derive"] }
arbtest = "0.2.0"
paste = "1.0.14"
pretty_assertions = "1.3.0"
tokio = { version = "1.23.0", features = [
    "test-util",
    "macros",
    "rt-multi-thread",
] }
